# bgawk

./: .gitignore  Cargo.toml  NOTICE  README.md
src/: audio.rs  components.rs  config.rs  interaction.rs  joints.rs  main.rs  objects.rs  ui.rs
src/lapis/: arrays.rs  atomics.rs  bools.rs  entities.rs  floats.rs  helpers.rs  ints.rs  mod.rs  nets.rs  sequencers.rs  sources.rs  statements.rs  strings.rs  units.rs  waves.rs
