[package]
name = "bgawk"
version = "0.1.0"
edition = "2021"
authors = ["amy universe <414d59@gmail.com>"]
repository = "https://github.com/tomara-x/bgawk"
license = "MIT OR Apache-2.0"

[dependencies.bevy]
version = "0.15.1"
default-features = false
features = [
    "multi_threaded",
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "tonemapping_luts",
    "x11",
]

[dependencies.avian2d]
version = "0.2.0"
default-features = false
features = [
    "2d",
    "f32",
    "parry-f32",
    "debug-plugin",
    "parallel",
    "simd",
]

[dependencies]
bevy_pancam = "0.17.0"
bevy_egui = "0.32.0"
egui = "0.30.0"
egui_extras = { version = "0.30.0", default-features = false, features = ["syntect"] }
fundsp = {version = "0.20.0", git = "https://github.com/SamiPerttu/fundsp"}
cpal = {version = "0.15.3", features = ["jack"]}
syn = {version = "2.0.96", features = ["full", "extra-traits"]}
crossbeam-channel = "0.5.14"
clap = { version = "4.5.27", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml"]}
xdg = "2.5.2"
serde = { version = "1.0.217", features = ["derive"] }

# smol amount of optimization for our stuff
[profile.dev]
opt-level = 1

# high optimizations and no debug symbols for deps
[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false

[profile.release]
panic = 'abort'
strip = true
codegen-units = 1
lto = "fat"
