[package]
name = "bgawk"
version = "0.1.0"
edition = "2024"
authors = ["amy universe <414d59@gmail.com>"]
repository = "https://github.com/tomara-x/bgawk"
license = "MIT OR Apache-2.0"

[dependencies.bevy]
version = "0.16.1"
default-features = false
features = [
    "multi_threaded",
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "tonemapping_luts",
    "x11",
    "configurable_error_handler",
]

[dependencies.avian2d]
version = "0.3.1"
default-features = false
features = [
    "2d",
    "f32",
    "parry-f32",
    "debug-plugin",
    "parallel",
    "simd",
]

[dependencies.bevy_egui]
version = "0.36.0"
default-features = false
features = ["manage_clipboard", "open_url", "default_fonts", "render"]

[dependencies]
bevy_pancam = "0.18.0"
egui_extras = { version = "0.32.0", default-features = false, features = ["syntect"] }
fundsp = { git = "https://github.com/tomara-x/fundsp", features = ["crossbeam"] }
cpal = { version = "0.16.0", features = ["jack"] }
syn = { version = "2.0.104", features = ["full", "extra-traits"] }
crossbeam-channel = "0.5.15"
clap = { version = "4.5.43", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml"] }
serde = { version = "1.0.219", features = ["derive"] }

# smol amount of optimization for our stuff
[profile.dev]
opt-level = 1

# high optimizations and no debug symbols for deps
[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false

[profile.release]
panic = 'abort'
strip = true
codegen-units = 1
lto = "thin"
